# fair-lending-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppHeader.tsx  DenialByIncomeChart.tsx  DenialByRaceChart.tsx  DisparityRuler.tsx  HypothesisCard.tsx  KpiCard.tsx  Panel.tsx  Pill.tsx  PosteriorChart.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  chartTheme.ts  format.ts
platform/: .env.example  README.md  pyproject.toml
platform/deploy/: README.md  bootstrap_db.sql  flab-api.service  nginx.conf
platform/flab/: __init__.py  cli.py  config.py
platform/flab/api/: __init__.py  main.py
platform/flab/db/: __init__.py  engine.py  schema.sql
platform/flab/hypotheses/: __init__.py  registry.py
platform/flab/ingest/: __init__.py  hmda.py
platform/flab/stats/: __init__.py  effects.py  multiple.py  power.py  resampling.py  tests.py
platform/notebooks/: 01_fair_lending_analysis.ipynb
platform/scripts/: screenshot.py
platform/tests/: test_registry.py  test_stats.py
