[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-lending-lab"
version = "0.1.0"
description = "Hypothesis testing and statistical inference on HMDA mortgage applications, fair-lending screening."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Scott Campbell" }]
license = { text = "MIT" }
