[project]
name = "flab"
version = "0.1.0"
description = "Fair Lending Lab: hypothesis testing and statistical inference on CFPB HMDA mortgage application records."
authors = [{ name = "Scott Campbell" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "loguru>=0.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.111",
    "freezegun>=1.5",
    "jupyter>=1.0",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "playwright>=1.45",
]

[project.scripts]
flab = "flab.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flab*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PL", "RUF"]
ignore = [
    "PLR0913", "PLR2004", "PLR0912", "PLR0915",
    "B008",
    "PLC0415",
    "RUF012",
    "RUF001",
    "RUF002",
    "RUF003",
    "B904",
    "E501",
    "SIM117",
    "C408",
    "E702",
    "PLW0603",
    "RUF005",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
